--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,15 @@
     <%= render 'layouts/stylesheets' %>
   </head>
   <body>
-    <div class="container">
-      <%= render 'layouts/header' %>
+    <%= render 'layouts/header' %>
+
       <section class="round">
+        <% flash.each do |key, value| %>
+          <%= content_tag(:div, value, :class => "flash #{key}") %>
+        <% end %> 
         <%= yield %>
       </section>
-      <%= render 'layouts/footer' %>
-      <%= debug(params) if Rails.env.development? %>
-    </div>
+
+
   </body>
 </html>
