--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,15 @@
     <%= render 'layouts/stylesheets' %>
   </head>
   <body>
-    <%= render 'layouts/header' %>
-
+    <div class="container">
+      <%= render 'layouts/header' %>
       <section class="round">
         <% flash.each do |key, value| %>
-          <%= content_tag(:div, value, :class => "flash #{key}") %>
-        <% end %> 
+          <div class="flash <%= key %>"><%= value %></div>
+        <% end %>
         <%= yield %>
       </section>
-
-
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
