--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,11 @@
-<h1>Sample App</h1>
-
+<h1>Bienvenidos a Micropost</h1>
 <p>
-  This is the home page for the
+  Únete a la comunidad de 
   <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
+  y comparte con tus amigos lo que quieras.
 </p>
 
-<%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+<%= link_to "Únete ahora!", signup_path, :class => "signup_button round" %>
+
+
+
