--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,7 +3,9 @@
 }
 
 body {
-  background: #cff;
+  background: #c1ddee;
+  background-image: url(/images/bg.png);
+  background-repeat: no-repeat;
 }
 
 header {
@@ -63,6 +65,7 @@ nav ul li {
   list-style-type: none;
   display: inline-block;
   padding: 0.2em 0;
+  font-size: 20px;
 }
 
 nav ul li a {
@@ -178,4 +181,3 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
-
